include/wrap/RTIambServices.h

ccall void wrap_enableTimeConstrained(void *amb, void **out_exc);
ccall void wrap_disableTimeConstrained(void *amb, void **out_exc);
ccall void wrap_timeAdvanceRequest(void *amb, void *theTime, void **out_exc);
ccall void wrap_timeAdvanceRequestAvailable(void *amb, void *theTime, void **out_exc);
ccall void wrap_nextEventRequest(void *amb, void *theTime, void **out_exc);
ccall void wrap_nextEventRequestAvailable(void *amb, void *theTime, void **out_exc);
ccall void wrap_flushQueueRequest(void *amb, void *theTime, void **out_exc);
ccall void wrap_enableAsynchronousDelivery(void *amb, void **out_exc);
ccall void wrap_disableAsynchronousDelivery(void *amb, void **out_exc);
ccall void wrap_queryLBTS(void *amb, void *theTime, void **out_exc);
ccall void wrap_queryFederateTime(void *amb, void *theTime, void **out_exc);
ccall void wrap_queryMinNextEventTime(void *amb, void *theTime, void **out_exc);
ccall void wrap_modifyLookahead(void *amb, void *theTime, void **out_exc);
ccall void wrap_queryLookahead(void *amb, void *theTime, void **out_exc);
ccall void wrap_retract(void *amb, RTI_ULong theSerial, RTI_ULong theFederate, void **out_exc);
ccall void wrap_changeAttributeOrderType(void *amb, RTI_ULong theObject, void *theAttributes, RTI_ULong theType, void **out_exc);
ccall void wrap_changeInteractionOrderType(void *amb, RTI_ULong theClass, RTI_ULong theType, void **out_exc);
//////////////////////////////////
// Data Distribution Management //
//////////////////////////////////

ccall void *wrap_createRegion(void *amb, RTI_ULong theSpace, RTI_ULong numberOfExtents, void **out_exc);
ccall void wrap_notifyAboutRegionModification(void *amb, void *theRegion, void **out_exc);
ccall void wrap_deleteRegion(void *amb, void *theRegion, void **out_exc);
ccall RTI_ULong wrap_registerObjectInstanceWithRegion(void *amb, RTI_ULong theClass, const char *theObject, RTI_ULong theAttributes[], void *theRegions[], RTI_ULong theNumberOfHandles, void **out_exc);
///// ObjectHandle                              // returned C3
///// registerObjectInstanceWithRegion (
/////   ObjectClassHandle theClass,             // supplied C1
/////   AttributeHandle   theAttributes[],      // supplied C4
/////   Region           *theRegions[],         // supplied C4
/////   ULong             theNumberOfHandles)   // supplied C1

///// void associateRegionForUpdates (
/////         Region             &theRegion,     // supplied C4
/////         ObjectHandle        theObject,     // supplied C1
/////   const AttributeHandleSet &theAttributes) // supplied C4

///// void unassociateRegionForUpdates (
/////   Region       &theRegion,     // supplied C4
/////   ObjectHandle  theObject)     // supplied C1

///// void subscribeObjectClassAttributesWithRegion (
/////         ObjectClassHandle   theClass,      // supplied C1
/////         Region             &theRegion,     // supplied C4
/////   const AttributeHandleSet &attributeList, // supplied C4
/////         Boolean        active = RTI_TRUE)

///// void unsubscribeObjectClassWithRegion (
/////   ObjectClassHandle theClass,          // supplied C1
/////   Region           &theRegion)         // supplied C4

ccall void wrap_subscribeInteractionClassWithRegion(void *amb, RTI_ULong theClass, void *theRegion, HsBool active, void **out_exc);
ccall void wrap_unsubscribeInteractionClassWithRegion(void *amb, RTI_ULong theClass, void *theRegion, void **out_exc);
///// EventRetractionHandle                                // returned C3
///// sendInteractionWithRegion (
/////         InteractionClassHandle       theInteraction, // supplied C1
/////   const ParameterHandleValuePairSet &theParameters,  // supplied C4
/////   const FedTime&                     theTime,        // supplied C4
/////   const char                        *theTag,         // supplied C4
/////   const Region                      &theRegion)      // supplied C4

///// void sendInteractionWithRegion (
/////         InteractionClassHandle       theInteraction, // supplied C1
/////   const ParameterHandleValuePairSet &theParameters,  // supplied C4
/////   const char                        *theTag,         // supplied C4
/////   const Region                      &theRegion)      // supplied C4

///// void requestClassAttributeValueUpdateWithRegion (
/////         ObjectClassHandle   theClass,      // supplied C1
/////   const AttributeHandleSet &theAttributes, // supplied C4
/////   const Region             &theRegion)     // supplied C4

//////////////////////////
// RTI Support Services //
//////////////////////////

ccall RTI_ULong wrap_getObjectClassHandle(void *amb, const char *theName, void **out_exc);
///// char *                         // returned C6    
///// getObjectClassName (
/////   ObjectClassHandle theHandle) // supplied C1

ccall RTI_ULong wrap_getAttributeHandle(void *amb, const char *theName, RTI_ULong whichClass, void **out_exc);
///// char *                          // returned C6 
///// getAttributeName (
/////   AttributeHandle   theHandle,  // supplied C1
/////   ObjectClassHandle whichClass) // supplied C1

ccall RTI_ULong wrap_getInteractionClassHandle(void *amb, const char *theName, void **out_exc);
///// char *                              // returned C6 
///// getInteractionClassName (
/////   InteractionClassHandle theHandle) // supplied C1

ccall RTI_ULong wrap_getParameterHandle(void *amb, const char *theName, RTI_ULong whichClass, void **out_exc);
///// char *                               // returned C6
///// getParameterName (
/////   ParameterHandle        theHandle,  // supplied C1
/////   InteractionClassHandle whichClass) // supplied C1

///// ObjectHandle                 // returned C3
///// getObjectInstanceHandle (
/////   const char *theName)       // supplied C4

///// char *                     // returned C6  
///// getObjectInstanceName (
/////   ObjectHandle theHandle)  // supplied C1

ccall RTI_ULong wrap_getRoutingSpaceHandle(void *amb, const char *theName, void **out_exc);
///// char *                         // returned C6
///// getRoutingSpaceName (
/////    /* const */ SpaceHandle theHandle) // supplied C4

ccall RTI_ULong wrap_getDimensionHandle(void *amb, const char *theName, RTI_ULong whichSpace, void **out_exc);
///// char *                        // returned C6
///// getDimensionName (
/////   DimensionHandle theHandle,  // supplied C1
/////   SpaceHandle     whichSpace) // supplied C1

///// SpaceHandle                      // returned C3
///// getAttributeRoutingSpaceHandle (
/////   AttributeHandle   theHandle,   // supplied C1
/////   ObjectClassHandle whichClass)  // supplied C1

///// ObjectClassHandle            // returned C3
///// getObjectClass (
/////   ObjectHandle theObject)    // supplied C1

///// SpaceHandle                             // returned C3
///// getInteractionRoutingSpaceHandle (
/////   InteractionClassHandle   theHandle)   // supplied C1

///// TransportationHandle      // returned C3
///// getTransportationHandle (
/////   const char *theName)    // supplied C4

///// char *                            // returned C6 
///// getTransportationName (
/////   TransportationHandle theHandle) // supplied C1

///// OrderingHandle         // returned C3
///// getOrderingHandle (
/////   const char *theName) // supplied C4

///// char *                      // returned C6 
///// getOrderingName (
/////   OrderingHandle theHandle) // supplied C1

///// void enableClassRelevanceAdvisorySwitch()

///// void disableClassRelevanceAdvisorySwitch()

ccall void wrap_enableAttributeRelevanceAdvisorySwitch(void *amb, void **out_exc);