src/Network/HLA/RTI13/RTIAmbServices/FFI.hs


foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_enableTimeConstrained"
    enableTimeConstrained :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_disableTimeConstrained" 
    disableTimeConstrained :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_timeAdvanceRequest" 
    timeAdvanceRequest :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_timeAdvanceRequestAvailable"
    timeAdvanceRequestAvailable :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_nextEventRequest"
    nextEventRequest :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_nextEventRequestAvailable"
    nextEventRequestAvailable :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_flushQueueRequest"
    flushQueueRequest :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_enableAsynchronousDelivery"
    enableAsynchronousDelivery :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_disableAsynchronousDelivery"
    disableAsynchronousDelivery :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_queryLBTS"
    queryLBTS :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_queryFederateTime"
    queryFederateTime :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_queryMinNextEventTime"
    queryMinNextEventTime :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_modifyLookahead"
    modifyLookahead :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_queryLookahead"
    queryLookahead :: Ptr (RTIAmbassador t) -> Ptr t -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_retract"
    retract :: Ptr (RTIAmbassador t) -> UniqueID -> FederateHandle -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_changeAttributeOrderType"
    changeAttributeOrderType :: Ptr (RTIAmbassador t) -> ObjectHandle -> Ptr (S.Set AttributeHandle) -> OrderingHandle -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_changeInteractionOrderType"
    changeInteractionOrderType :: Ptr (RTIAmbassador t) -> InteractionClassHandle -> OrderingHandle -> Ptr (Ptr RTIException) -> IO ()

-----------------------------------
-- * Data Distribution Management
-----------------------------------

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_createRegion" 
    createRegion :: Ptr (RTIAmbassador t) -> SpaceHandle -> ULong -> Ptr (Ptr RTIException) -> IO (Ptr Region)

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_notifyAboutRegionModification" 
    notifyAboutRegionModification :: Ptr (RTIAmbassador t) -> Ptr Region -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_deleteRegion" 
    deleteRegion :: Ptr (RTIAmbassador t) -> Ptr Region -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_registerObjectInstanceWithRegion_withName" 
    registerObjectInstanceWithRegion_withName :: Ptr (RTIAmbassador t) -> ObjectClassHandle -> CString -> Ptr AttributeHandle -> Ptr (Ptr Region) -> ULong -> Ptr (Ptr RTIException) -> IO ObjectHandle

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_registerObjectInstanceWithRegion" 
    registerObjectInstanceWithRegion :: Ptr (RTIAmbassador t) -> ObjectClassHandle -> Ptr AttributeHandle -> Ptr (Ptr Region) -> ULong -> Ptr (Ptr RTIException) -> IO ObjectHandle

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_associateRegionForUpdates" 
    associateRegionForUpdates :: Ptr (RTIAmbassador t) -> Ptr Region -> ObjectHandle -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_unassociateRegionForUpdates" 
    unassociateRegionForUpdates :: Ptr (RTIAmbassador t) -> Ptr Region -> ObjectHandle -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_subscribeObjectClassAttributesWithRegion" 
    subscribeObjectClassAttributesWithRegion :: Ptr (RTIAmbassador t) -> ObjectClassHandle -> Ptr Region -> Ptr (S.Set AttributeHandle) -> Bool -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_unsubscribeObjectClassWithRegion" 
    unsubscribeObjectClassWithRegion :: Ptr (RTIAmbassador t) -> ObjectClassHandle -> Ptr Region -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_subscribeInteractionClassWithRegion" 
    subscribeInteractionClassWithRegion :: Ptr (RTIAmbassador t) -> InteractionClassHandle -> Ptr Region -> Bool -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_unsubscribeInteractionClassWithRegion" 
    unsubscribeInteractionClassWithRegion :: Ptr (RTIAmbassador t) -> InteractionClassHandle -> Ptr Region -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_sendInteractionWithRegionAtTime" 
    sendInteractionWithRegionAtTime :: Ptr (RTIAmbassador t) -> InteractionClassHandle -> Ptr ParameterHandleValuePairSet -> Ptr t -> CString -> Ptr Region -> Ptr UniqueID -> Ptr FederateHandle -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_sendInteractionWithRegion" 
    sendInteractionWithRegion :: Ptr (RTIAmbassador t) -> InteractionClassHandle -> Ptr ParameterHandleValuePairSet -> CString -> Ptr Region -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_requestClassAttributeValueUpdateWithRegion" 
    requestClassAttributeValueUpdateWithRegion :: Ptr (RTIAmbassador t) -> ObjectClassHandle -> Ptr (S.Set AttributeHandle) -> Ptr Region -> Ptr (Ptr RTIException) -> IO ()


---------------------------
-- * RTI Support Services
---------------------------

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_getObjectClassHandle"
    getObjectClassHandle :: Ptr (RTIAmbassador t) -> CString -> Ptr (Ptr RTIException) -> IO ObjectClassHandle

foreign import ccall unsafe "wrap/RTIAmbServices.h wrap_getObjectClassName"
    getObjectClassName :: Ptr (RTIAmbassador t) -> ObjectClassHandle -> Ptr (Ptr RTIException) -> IO CString

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getAttributeHandle"
    getAttributeHandle :: Ptr (RTIAmbassador t) -> CString -> ObjectClassHandle -> Ptr (Ptr RTIException) -> IO AttributeHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getAttributeName"
    getAttributeName :: Ptr (RTIAmbassador t) -> AttributeHandle -> ObjectClassHandle -> Ptr (Ptr RTIException) -> IO CString

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getInteractionClassHandle"
    getInteractionClassHandle :: Ptr (RTIAmbassador t) -> CString -> Ptr (Ptr RTIException) -> IO InteractionClassHandle
    
foreign import ccall unsafe "wrap/RTIambServices.h wrap_getInteractionClassName"
    getInteractionClassName :: Ptr (RTIAmbassador t) -> InteractionClassHandle -> Ptr (Ptr RTIException) -> IO CString

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getParameterHandle"
    getParameterHandle :: Ptr (RTIAmbassador t) -> CString -> InteractionClassHandle -> Ptr (Ptr RTIException) -> IO ParameterHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getParameterName"
    getParameterName :: Ptr (RTIAmbassador t) -> ParameterHandle -> InteractionClassHandle -> Ptr (Ptr RTIException) -> IO CString

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getObjectInstanceHandle"
    getObjectInstanceHandle :: Ptr (RTIAmbassador t) -> CString -> Ptr (Ptr RTIException) -> IO ObjectHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getObjectInstanceName"
    getObjectInstanceName :: Ptr (RTIAmbassador t) -> ObjectHandle -> Ptr (Ptr RTIException) -> IO CString

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getRoutingSpaceHandle"
    getRoutingSpaceHandle :: Ptr (RTIAmbassador t) -> CString -> Ptr (Ptr RTIException) -> IO SpaceHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getRoutingSpaceName"
    getRoutingSpaceName :: Ptr (RTIAmbassador t) -> SpaceHandle -> Ptr (Ptr RTIException) -> IO CString

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getDimensionHandle"
    getDimensionHandle :: Ptr (RTIAmbassador t) -> CString -> SpaceHandle -> Ptr (Ptr RTIException) -> IO DimensionHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getDimensionName"
    getDimensionName :: Ptr (RTIAmbassador t) -> DimensionHandle -> SpaceHandle -> Ptr (Ptr RTIException) -> IO CString

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getAttributeRoutingSpaceHandle"
    getAttributeRoutingSpaceHandle :: Ptr (RTIAmbassador t) -> AttributeHandle -> ObjectClassHandle -> Ptr (Ptr RTIException) -> IO SpaceHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getObjectClass"
    getObjectClass :: Ptr (RTIAmbassador t) -> ObjectHandle -> Ptr (Ptr RTIException) -> IO ObjectClassHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getInteractionRoutingSpaceHandle"
    getInteractionRoutingSpaceHandle :: Ptr (RTIAmbassador t) -> InteractionClassHandle -> Ptr (Ptr RTIException) -> IO SpaceHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getTransportationHandle"
    getTransportationHandle :: Ptr (RTIAmbassador t) -> CString -> Ptr (Ptr RTIException) -> IO TransportationHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getTransportationName"
    getTransportationName :: Ptr (RTIAmbassador t) -> TransportationHandle -> Ptr (Ptr RTIException) -> IO CString

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getOrderingHandle"
    getOrderingHandle :: Ptr (RTIAmbassador t) -> CString -> Ptr (Ptr RTIException) -> IO OrderingHandle

foreign import ccall unsafe "wrap/RTIambServices.h wrap_getOrderingName"
    getOrderingName :: Ptr (RTIAmbassador t) -> OrderingHandle -> Ptr (Ptr RTIException) -> IO CString

foreign import ccall "wrap/RTIAmbServices.h wrap_enableClassRelevanceAdvisorySwitch"
    enableClassRelevanceAdvisorySwitch :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall "wrap/RTIAmbServices.h wrap_disableClassRelevanceAdvisorySwitch"
    disableClassRelevanceAdvisorySwitch :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall "wrap/RTIAmbServices.h wrap_enableAttributeRelevanceAdvisorySwitch"
    enableAttributeRelevanceAdvisorySwitch :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall "wrap/RTIAmbServices.h wrap_disableAttributeRelevanceAdvisorySwitch"
    disableAttributeRelevanceAdvisorySwitch :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall "wrap/RTIAmbServices.h wrap_enableAttributeScopeAdvisorySwitch"
    enableAttributeScopeAdvisorySwitch :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()

foreign import ccall "wrap/RTIAmbServices.h wrap_disableAttributeScopeAdvisorySwitch"
    disableAttributeScopeAdvisorySwitch :: Ptr (RTIAmbassador t) -> Ptr (Ptr RTIException) -> IO ()
